improve vmoptions display