@@ -17,14 +17,18 @@ import org.eclipse.jifa.gclog.model.VmOptions;
 import org.junit.Assert;
 import org.junit.Test;
 
+import java.util.HashMap;
+import java.util.Map;
+
 public class TestVmOptions {
     @Test
-    public void testVmOptions(){
+    public void testVmOptions() {
         String optionString =
-                        "-server " +
+                "-server " +
                         "-XX:+UseG1GC " +
                         "-XX:-DisableExplicitGC " +
                         "-verbose:gc " +
+                        "-Xloggc:gc.log " +
                         "-XX:+PrintGCDetails " +
                         "-XX:+PrintGCDateStamps " +
                         "-XX:+HeapDumpOnOutOfMemoryError " +
@@ -32,6 +36,7 @@ public class TestVmOptions {
                         "-XX:ErrorFile=/home/admin/logs/hs_err_pid%p.log " +
                         "-Xms4200m " +
                         "-Xmx4200m " +
+                        "-XX:ParallelGCThreads=8 " +
                         "-XX:MaxNewSize=1500m " +
                         "-XX:InitiatingHeapOccupancyPercent=50 " +
                         "-XX:G1HeapRegionSize=8m " +
@@ -39,13 +44,27 @@ public class TestVmOptions {
                         "-XX:MetaspaceSize=10240 " +
                         "-XX:MaxMetaspaceSize=512m\n";
         VmOptions options = new VmOptions(optionString);
-        Assert.assertEquals(options.getOriginalOptionString(),optionString);
+        Assert.assertEquals(options.getOriginalOptionString(), optionString);
         Assert.assertNull(options.getOptionValue("Xmn"));
-        Assert.assertEquals(4200L * 1024 * 1024 * 1024, (long)options.getOptionValue("Xmx"));
-        Assert.assertTrue( options.getOptionValue("server"));
-        Assert.assertFalse( options.getOptionValue("DisableExplicitGC"));
-        Assert.assertEquals(50L,(long)options.getOptionValue("InitiatingHeapOccupancyPercent"));
-        Assert.assertEquals(10240L,(long)options.getOptionValue("MetaspaceSize"));
-        Assert.assertEquals("/home/admin/logs/hs_err_pid%p.log",options.getOptionValue("ErrorFile"));
+        Assert.assertEquals(4200L * 1024 * 1024 * 1024, (long) options.getOptionValue("Xmx"));
+        Assert.assertTrue(options.getOptionValue("server"));
+        Assert.assertFalse(options.getOptionValue("DisableExplicitGC"));
+        Assert.assertEquals(50L, (long) options.getOptionValue("InitiatingHeapOccupancyPercent"));
+        Assert.assertEquals(10240L, (long) options.getOptionValue("MetaspaceSize"));
+        Assert.assertEquals("/home/admin/logs/hs_err_pid%p.log", options.getOptionValue("ErrorFile"));
+        Assert.assertEquals("gc", options.getOptionValue("verbose"));
+        Assert.assertEquals("gc.log", options.getOptionValue("Xloggc"));
+
+        VmOptions.VmOptionResult result = options.getVmOptionResult();
+        Assert.assertTrue(result.getOther().contains(new VmOptions.VmOptionVo("-XX:ErrorFile=/home/admin/logs/hs_err_pid%p.log")));
+        Map<String, Integer> optionIndex = new HashMap<>();
+        for (int i = 0; i < result.getGcRelated().size(); i++) {
+            optionIndex.put(result.getGcRelated().get(i).getText(), i);
+        }
+        Assert.assertTrue(optionIndex.get("-XX:+UseG1GC") < optionIndex.get("-Xms4200m"));
+        Assert.assertTrue(optionIndex.get("-Xms4200m") < optionIndex.get("-XX:ParallelGCThreads=8"));
+        Assert.assertTrue(optionIndex.get("-XX:ParallelGCThreads=8") < optionIndex.get("-XX:InitiatingHeapOccupancyPercent=50"));
+        Assert.assertTrue(optionIndex.get("-XX:InitiatingHeapOccupancyPercent=50") < optionIndex.get("-XX:-DisableExplicitGC"));
+        Assert.assertTrue(optionIndex.get("-XX:-DisableExplicitGC") < optionIndex.get("-XX:+PrintGCDetails"));
     }
 }
